# cosmic-notes

./: Cargo.toml  README.md  install-local.sh  install.sh
src/: main.rs.backup2  main.rs.save  main.rs.save.1  main.rs.save.2  main.rs.working-backup
